# glfw-template

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp
